userChrome.css
:root {
	--tab-active-bg-color: #2a283e;
	--tab-inactive-bg-color: #908caa;
	--tab-active-fg-fallback-color: #e0def4;		/* color of text in an active tab without a container */
	--tab-inactive-fg-fallback-color: #393552;		/* color of text in an inactive tab without a container */
    --tab-hover-bg-color: #393552;
	--urlbar-focused-bg-color: #eee;
	--urlbar-not-focused-bg-color: #eee;
    --sidebar-bg-color: #222;
	--toolbar-bgcolor: #222 !important;
	--tab-font: 'BlexMono Nerd Font';
	--urlbar-font: 'BlexMono Nerd Font';

	/* try increasing if you encounter problems */
	--urlbar-height-setting: 20px;
	--tab-min-height: 18px !important;

	/* I don't recommend you touch this unless you know what you're doing */
	--arrowpanel-menuitem-padding: 2px !important;
	--arrowpanel-border-radius: 0px !important;
	--arrowpanel-menuitem-border-radius: 0px !important;
	--toolbarbutton-border-radius: 0px !important;
	--toolbarbutton-inner-padding: 0px 2px !important;
	--toolbar-field-focus-background-color: var(--urlbar-focused-bg-color) !important;
	--toolbar-field-background-color: var(--urlbar-not-focused-bg-color) !important;
	--toolbar-field-focus-border-color: transparent !important;
}

/* --- GENERAL DEBLOAT ---------------------------------- */

/* Bottom left page loading status or url preview */
#statuspanel { display: none !important; }

/* remove radius from right-click popup */
menupopup, panel { --panel-border-radius: 0px !important; }
menu, menuitem, menucaption { border-radius: 0px !important; }

/* no stupid large buttons in right-click menu */
menupopup > #context-navigation { display: none !important; }
menupopup > #context-sep-navigation { display: none !important; }

/* --- DEBLOAT NAVBAR ----------------------------------- */

#back-button { display: none; }
#forward-button { display: none; }
#reload-button { display: none; }
#stop-button { display: none; }
#home-button { display: none; }
#library-button { display: none; }
/* #fxa-toolbar-menu-button { display: none; } */
/* empty space before and after the url bar */
#customizableui-special-spring1, #customizableui-special-spring2 { display: none; }
.private-browsing-indicator-with-label { display: none; }

/* --- STYLE NAVBAR ------------------------------------ */

/* remove padding between toolbar buttons */
toolbar .toolbarbutton-1 { padding: 0 0 !important; }

/* add it back to the downloads button, otherwise it's too close to the urlbar */
#downloads-button {
	margin-left: 2px !important;
}

/* add padding to the right of the last button so that it doesn't touch the edge of the window */
#PanelUI-menu-button {
	padding: 0px 4px 0px 0px !important;
}

#urlbar-container {
	--urlbar-container-height: var(--urlbar-height-setting) !important;
	margin-left: 0 !important;
	margin-right: 0 !important;
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	font-family: var(--urlbar-font, 'monospace');
	font-size: 18px;
}

#urlbar {
	--urlbar-height: var(--urlbar-height-setting) !important;
	--urlbar-toolbar-height: var(--urlbar-height-setting) !important;
	min-height: var(--urlbar-height-setting) !important;
}

#urlbar-input {
	margin-left: 0.4em !important;
	margin-right: 0.4em !important;
}
#urlbar > .urlbar-input-container {
	padding: 0 !important;
	border: 0 !important;
}

#navigator-toolbox {
	border: none !important;
}

/* keep pop-up menus from overlapping with navbar */
#widget-overflow { margin: 3px !important; }
#customizationui-widget-panel { margin: 3px !important; }
#unified-extensions-panel { margin-top: 3px !important; }
#appMenu-popup { margin-top: 3px !important; }

/* --- UNIFIED EXTENSIONS BUTTON ------------------------ */

/* make extension icons smaller */
#unified-extensions-view {
	--uei-icon-size: 16px;
}

/* hide bloat */
.unified-extensions-item-message-deck,
#unified-extensions-view > .panel-header,
#unified-extensions-view > toolbarseparator,
#unified-extensions-manage-extensions {
	display: none !important;
}

/* add 3px padding on the top and the bottom of the box */
.panel-subview-body {
	padding: 3px 0px !important;
}

#unified-extensions-view .toolbarbutton-icon {
	padding: 0 !important;
}

.unified-extensions-item-contents {
	line-height: 1 !important;
	white-space: nowrap !important;
}

#unified-extensions-panel .unified-extensions-item {
	margin-block: 0 !important;
}

.toolbar-menupopup :is(menu, menuitem), .subview-subheader, panelview
.toolbarbutton-1, .subviewbutton, .widget-overflow-list .toolbarbutton-1 {
	padding: 4px !important;
}

/* --- DEBLOAT URLBAR ----------------------------------- */

#pageActionButton { display: none; }
#pocket-button { display: none; }
#urlbar-zoom-button { display: none; }
#tracking-protection-icon-container { display: none !important; }
/* #reader-mode-button{ display: none !important; } */
/* #star-button { display: none; } */
/* #star-button-box:hover { background: inherit !important; } */
#urlbar-searchmode-switcher { display: none; }
#searchmode-switcher-chicklet { display: none !important; }

/* hide container indicators; we indicate container by changing tab title text color */
#identity-icon-box {
	margin-inline-end: 0 !important;
	padding: 0 4px !important;
}
.tabbrowser-tab[usercontextid] > .tab-stack > .tab-background > .tab-context-line {
	display: none !important;
}

/* Go to arrow button at the end of the urlbar when searching */
#urlbar-go-button { display: none; }

/* remove container indicator from urlbar */
#userContext-label, #userContext-indicator { display: none !important;}

/* --- STYLE TAB TOOLBAR -------------------------------- */

#titlebar {
	--proton-tab-block-margin: 0px !important;
	--tab-block-margin: 0px !important;
}

#TabsToolbar, .tabbrowser-tab {
	max-height: var(--tab-min-height) !important;
	font-size: 18px !important;
}
/* ... */

